[project]
name = "docuchat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "faiss-cpu>=1.12.0",
    "fastapi>=0.116.1",
    "huggingface-hub>=0.34.4",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-google-genai==2.1.9",
    "langchain-ollama>=0.3.7",
    "langchain-openai>=0.3.30",
    "openai>=1.100.2",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.48.1",
    "tiktoken>=0.11.0",
    "uvicorn>=0.35.0",
]
